# sesame-csm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
csm-core/: Cargo.toml
csm-ws/: Cargo.toml
csm-ws/src/: audio.rs  generation.rs  http.rs  main.rs  pool.rs  protocol.rs  session.rs  voices.rs
