[package]
name = "csm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Candle-based inference for Sesame CSM-1B text-to-speech (model + Mimi audio decoder). Derived from cartesia-one/csm.rs."

[lib]
name = "csm_rs"
path = "lib.rs"

[dependencies]
moshi = { version = "0.6.3" }
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
anyhow = "1.0.86"
tokenizers = "0.21.4"
hf-hub = "0.4.3"
tokio = { version = "1.38.0", features = ["full"] }
async-stream = "0.3.5"
futures-util = "0.3.30"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "moshi/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn", "moshi/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "moshi/metal"]
