[package]
name = "csm-ws"
version.workspace = true
edition.workspace = true

[[bin]]
name = "csm-ws"
path = "src/main.rs"

[dependencies]
csm-core = { path = "../csm-core" }
candle-core = { version = "0.9.1" }

anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

log = "0.4"
env_logger = "0.11"

rubato = "0.15"

[features]
default = []
cuda = ["csm-core/cuda"]
cudnn = ["csm-core/cudnn"]
mkl = ["csm-core/mkl"]
accelerate = ["csm-core/accelerate"]
metal = ["csm-core/metal"]
